Внесла изменения, исправила стили

--- a/goit-js-hw-13-image-finder./src/index.html
+++ b/goit-js-hw-13-image-finder./src/index.html
@@ -13,10 +13,10 @@
 
 <body>
   <section class="container">
-    <div class="js-card-container">
-      <form class="search-form" id="search-form">
-        <input type="text" class="form-control" name="query" autocomplete="off" placeholder="Search images..." />
-        <span></span>
+    <div class="js-card-container"  id="wrap">
+      <form class="search-form" id="search-form" action="" >
+        <input  id="search"  class="form-control " name="query" autocomplete="off" placeholder="Search images..." type="text" />
+        <input id="search_submit" value="Rechercher" type="submit">
       </form>
     </div>
     <article class="gallery-img">
